Remote authenticator and authorizer (#234)
* Move authorizer_factory out to pkg/auth/configuration

Prepare for remote authentication and authorization to avoid future
curcular dependency.

* Add grpcClientFactory to grpc.NewAuthenticatorFromConfiguration

* Add grpcClientFactory to http.NewAuthenticatorFromConfiguration

* Add grpcClientFactory to NewAuthorizerFromConfiguration

* Add remote auth .proto definitions

* Implement remote authenticator and authorizer

The authenticate and authorize tasks can now be sent remotely over gRPC
to an external service. This way, custom authentication and
authorization does not require a modified builds of the Buildbarn
components.

To avoid spamming the remote service with calls for every REv2 request
and keep the latency low, the verdicts, both allow and deny, are cached
for a duration specified in the response from the remote service.

* Deduplicate JWT header authenticator code

--- a/pkg/grpc/BUILD.bazel
+++ b/pkg/grpc/BUILD.bazel
@@ -14,7 +14,6 @@ go_library(
         "deduplicating_client_factory.go",
         "deny_authenticator.go",
         "jmespath_extractor.go",
-        "jwt_authenticator.go",
         "lazy_client_dialer.go",
         "metadata_adding_interceptor.go",
         "metadata_extracting_and_forwarding_interceptor.go",
@@ -27,6 +26,7 @@ go_library(
         "peer_transport_credentials_linux.go",
         "proto_trace_attributes_extractor.go",
         "proxy_dialer.go",
+        "request_headers_authenticator.go",
         "request_metadata_tracing_interceptor.go",
         "server.go",
         "tls_client_certificate_authenticator.go",
@@ -36,6 +36,7 @@ go_library(
     deps = [
         "//pkg/auth",
         "//pkg/clock",
+        "//pkg/eviction",
         "//pkg/jwt",
         "//pkg/program",
         "//pkg/proto/auth",
@@ -100,6 +101,7 @@ go_test(
         "metadata_forwarding_and_reusing_interceptor_test.go",
         "peer_credentials_authenticator_test.go",
         "proto_trace_attributes_extractor_test.go",
+        "request_headers_authenticator_test.go",
         "request_metadata_tracing_interceptor_test.go",
         "tls_client_certificate_authenticator_test.go",
     ] + select({
