--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -46,6 +46,7 @@ use_repo(
     "com_github_aws_aws_sdk_go_v2_service_s3",
     "com_github_aws_aws_sdk_go_v2_service_sts",
     "com_github_bazelbuild_buildtools",
+    "com_github_buildbarn_go_sha256tree",
     "com_github_fxtlabs_primes",
     "com_github_go_jose_go_jose_v3",
     "com_github_google_uuid",
