--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -49,6 +49,7 @@ use_repo(
     "com_github_buildbarn_go_sha256tree",
     "com_github_fxtlabs_primes",
     "com_github_go_jose_go_jose_v3",
+    "com_github_gocql_gocql",
     "com_github_google_uuid",
     "com_github_gorilla_mux",
     "com_github_grpc_ecosystem_go_grpc_middleware",
