--- a/pkg/blobstore/configuration/BUILD.bazel
+++ b/pkg/blobstore/configuration/BUILD.bazel
@@ -21,6 +21,7 @@ go_library(
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/blobstore",
+        "//pkg/blobstore/cassandra",
         "//pkg/blobstore/completenesschecking",
         "//pkg/blobstore/grpcclients",
         "//pkg/blobstore/local",
