Add ability to use ID token for user info claims instead of endpoint
Some OIDC providers only provide some user info claims in the ID token
and not in the user info endpoint. This commit makes it possible to
configure the OIDC authenticator to use the ID token for user info
claims instead of the user info endpoint.

--- a/pkg/proto/configuration/http/BUILD.bazel
+++ b/pkg/proto/configuration/http/BUILD.bazel
@@ -11,6 +11,8 @@ proto_library(
         "//pkg/proto/configuration/grpc:grpc_proto",
         "//pkg/proto/configuration/jwt:jwt_proto",
         "//pkg/proto/configuration/tls:tls_proto",
+        "@protobuf//:duration_proto",
+        "@protobuf//:empty_proto",
     ],
 )
 
