--- a/.bazelrc
+++ b/.bazelrc
@@ -1,1 +1,6 @@
 run --workspace_status_command="bash tools/workspace-status.sh"
+
+# Don't build protoc from the cc_binary, it's slow and spammy when cache miss
+common --per_file_copt=external/.*protobuf.*@--PROTOBUF_WAS_NOT_SUPPOSED_TO_BE_BUILT
+common --host_per_file_copt=external/.*protobuf.*@--PROTOBUF_WAS_NOT_SUPPOSED_TO_BE_BUILT
+common --incompatible_enable_proto_toolchain_resolution
