--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -14,6 +14,7 @@ bazel_dep(name = "rules_oci", version = "2.2.5")
 bazel_dep(name = "rules_pkg", version = "1.0.1")
 bazel_dep(name = "rules_proto", version = "7.1.0")
 bazel_dep(name = "toolchains_llvm", version = "1.3.0")
+bazel_dep(name = "toolchains_protoc", version = "0.4.2")
 
 git_override(
     module_name = "bazel_remote_apis",
@@ -30,6 +31,14 @@ single_version_override(
     module_name = "jsonnet",
     patches = ["//:patches/jsonnet/bazel-8.diff"],
 )
+
+protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")
+
+# Match protobuf above, until it ships a pre-built binary toolchain itself
+protoc.toolchain(version = "v29.3")
+use_repo(protoc, "toolchains_protoc_hub")
+
+register_toolchains("@toolchains_protoc_hub//:all")
 
 go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
 go_sdk.download(version = "1.24.0")
