--- a/.bazelrc
+++ b/.bazelrc
@@ -1,2 +1,5 @@
 run --workspace_status_command="bash tools/workspace-status.sh"
 common --incompatible_enable_proto_toolchain_resolution
+# Ensure that we don't accidentally build protobuf
+common --per_file_copt=external/.*protobuf.*@--PROTOBUF_WAS_NOT_SUPPOSED_TO_BE_BUILT
+common --host_per_file_copt=external/.*protobuf.*@--PROTOBUF_WAS_NOT_SUPPOSED_TO_BE_BUILT
