--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -7,6 +7,7 @@ bazel_dep(name = "gazelle", version = "0.42.0")
 bazel_dep(name = "googleapis", version = "0.0.0-20240819-fe8ba054a")
 bazel_dep(name = "jsonnet_go", version = "0.20.0")
 bazel_dep(name = "opentelemetry-proto", version = "1.5.0")
+bazel_dep(name = "toolchains_protoc", version = "0.4.2") # must come BEFORE protobuf so the toolchain registration wins
 bazel_dep(name = "protobuf", version = "29.3")
 bazel_dep(name = "rules_go", version = "0.53.0")
 bazel_dep(name = "rules_jsonnet", version = "0.6.0")
@@ -14,7 +15,6 @@ bazel_dep(name = "rules_oci", version = "2.2.5")
 bazel_dep(name = "rules_pkg", version = "1.0.1")
 bazel_dep(name = "rules_proto", version = "7.1.0")
 bazel_dep(name = "toolchains_llvm", version = "1.3.0")
-bazel_dep(name = "toolchains_protoc", version = "0.4.2")
 
 git_override(
     module_name = "bazel_remote_apis",
@@ -32,13 +32,9 @@ single_version_override(
     patches = ["//:patches/jsonnet/bazel-8.diff"],
 )
 
-protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")
-
 # Match protobuf above, until it ships a pre-built binary toolchain itself
+protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")
 protoc.toolchain(version = "v29.3")
-use_repo(protoc, "toolchains_protoc_hub")
-
-register_toolchains("@toolchains_protoc_hub//:all")
 
 go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
 go_sdk.download(version = "1.24.0")
