Add a generic util.Must function
We currently have a couple of MustNew*() functions in our tree. Now that
we have generics, let's add a small helper function for this instead.

--- a/pkg/auth/BUILD.bazel
+++ b/pkg/auth/BUILD.bazel
@@ -49,6 +49,7 @@ go_test(
         "//pkg/eviction",
         "//pkg/proto/auth",
         "//pkg/testutil",
+        "//pkg/util",
         "@com_github_jmespath_go_jmespath//:go-jmespath",
         "@com_github_stretchr_testify//require",
         "@io_opentelemetry_go_otel//attribute",
