--- a/pkg/digest/BUILD.bazel
+++ b/pkg/digest/BUILD.bazel
@@ -46,6 +46,7 @@ go_test(
         "//internal/mock",
         "//pkg/eviction",
         "//pkg/testutil",
+        "//pkg/util",
         "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
         "@com_github_google_uuid//:uuid",
         "@com_github_stretchr_testify//require",
