--- a/pkg/grpc/BUILD.bazel
+++ b/pkg/grpc/BUILD.bazel
@@ -129,6 +129,7 @@ go_test(
         "//pkg/proto/auth",
         "//pkg/proto/configuration/grpc",
         "//pkg/testutil",
+        "//pkg/util",
         "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
         "@com_github_jmespath_go_jmespath//:go-jmespath",
         "@com_github_stretchr_testify//require",
