--- a/pkg/blobstore/mirrored/BUILD.bazel
+++ b/pkg/blobstore/mirrored/BUILD.bazel
@@ -22,7 +22,10 @@ go_library(
 
 go_test(
     name = "mirrored_test",
-    srcs = ["mirrored_blob_access_test.go"],
+    srcs = [
+        "mirrored_blob_access_test.go",
+        "resilient_mirrored_blob_access_test.go",
+    ],
     deps = [
         ":mirrored",
         "//internal/mock",
