--- a/pkg/blobstore/grpcservers/BUILD.bazel
+++ b/pkg/blobstore/grpcservers/BUILD.bazel
@@ -21,6 +21,7 @@ go_library(
         "//pkg/proto/iscc",
         "//pkg/util",
         "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
+        "@com_github_klauspost_compress//zstd",
         "@org_golang_google_genproto_googleapis_bytestream//:bytestream",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
@@ -43,6 +44,7 @@ go_test(
         "//pkg/proto/icas",
         "//pkg/testutil",
         "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
+        "@com_github_klauspost_compress//zstd",
         "@com_github_stretchr_testify//require",
         "@org_golang_google_genproto_googleapis_bytestream//:bytestream",
         "@org_golang_google_genproto_googleapis_rpc//status",
