--- a/pkg/proto/configuration/bb_storage/BUILD.bazel
+++ b/pkg/proto/configuration/bb_storage/BUILD.bazel
@@ -12,6 +12,7 @@ proto_library(
         "//pkg/proto/configuration/builder:builder_proto",
         "//pkg/proto/configuration/global:global_proto",
         "//pkg/proto/configuration/grpc:grpc_proto",
+        "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_proto",
     ],
 )
 
@@ -26,6 +27,7 @@ go_proto_library(
         "//pkg/proto/configuration/builder",
         "//pkg/proto/configuration/global",
         "//pkg/proto/configuration/grpc",
+        "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
     ],
 )
 
