--- a/pkg/util/BUILD.bazel
+++ b/pkg/util/BUILD.bazel
@@ -14,12 +14,14 @@ go_library(
         "tls.go",
         "tls_certificate.go",
         "uuid.go",
+        "zstd_reader.go",
     ],
     importpath = "github.com/buildbarn/bb-storage/pkg/util",
     visibility = ["//visibility:public"],
     deps = [
         "//pkg/proto/configuration/tls",
         "@com_github_google_uuid//:uuid",
+        "@com_github_klauspost_compress//zstd",
         "@com_github_prometheus_client_golang//prometheus",
         "@jsonnet_go//:go_default_library",
         "@org_golang_google_grpc//codes",
