--- a/pkg/auth/BUILD.bazel
+++ b/pkg/auth/BUILD.bazel
@@ -18,10 +18,10 @@ go_library(
         "//pkg/clock",
         "//pkg/digest",
         "//pkg/eviction",
+        "//pkg/jmespath",
         "//pkg/otel",
         "//pkg/proto/auth",
         "//pkg/util",
-        "@com_github_jmespath_go_jmespath//:go-jmespath",
         "@io_opentelemetry_go_otel//attribute",
         "@org_golang_google_grpc//:grpc",
         "@org_golang_google_grpc//codes",
@@ -47,10 +47,10 @@ go_test(
         "//internal/mock",
         "//pkg/digest",
         "//pkg/eviction",
+        "//pkg/jmespath",
         "//pkg/proto/auth",
         "//pkg/testutil",
         "//pkg/util",
-        "@com_github_jmespath_go_jmespath//:go-jmespath",
         "@com_github_stretchr_testify//require",
         "@io_opentelemetry_go_otel//attribute",
         "@io_opentelemetry_go_proto_otlp//common/v1:common",
