--- a/pkg/auth/configuration/BUILD.bazel
+++ b/pkg/auth/configuration/BUILD.bazel
@@ -11,9 +11,10 @@ go_library(
         "//pkg/digest",
         "//pkg/eviction",
         "//pkg/grpc",
+        "//pkg/jmespath",
+        "//pkg/program",
         "//pkg/proto/configuration/auth",
         "//pkg/util",
-        "@com_github_jmespath_go_jmespath//:go-jmespath",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
         "@org_golang_google_protobuf//encoding/protojson",
