--- a/pkg/http/BUILD.bazel
+++ b/pkg/http/BUILD.bazel
@@ -24,6 +24,7 @@ go_library(
         "//pkg/auth",
         "//pkg/clock",
         "//pkg/grpc",
+        "//pkg/jmespath",
         "//pkg/jwt",
         "//pkg/program",
         "//pkg/proto/configuration/http",
@@ -31,7 +32,6 @@ go_library(
         "//pkg/random",
         "//pkg/util",
         "@com_github_aohorodnyk_mimeheader//:mimeheader",
-        "@com_github_jmespath_go_jmespath//:go-jmespath",
         "@com_github_prometheus_client_golang//prometheus",
         "@com_github_prometheus_client_golang//prometheus/promhttp",
         "@org_golang_google_grpc//codes",
@@ -56,11 +56,11 @@ go_test(
         ":http",
         "//internal/mock",
         "//pkg/auth",
+        "//pkg/jmespath",
         "//pkg/proto/auth",
         "//pkg/proto/http/oidc",
         "//pkg/testutil",
         "//pkg/util",
-        "@com_github_jmespath_go_jmespath//:go-jmespath",
         "@com_github_stretchr_testify//require",
         "@org_golang_google_grpc//codes",
         "@org_golang_google_grpc//status",
