--- a/pkg/proto/configuration/grpc/BUILD.bazel
+++ b/pkg/proto/configuration/grpc/BUILD.bazel
@@ -9,6 +9,7 @@ proto_library(
     deps = [
         "//pkg/proto/auth:auth_proto",
         "//pkg/proto/configuration/eviction:eviction_proto",
+        "//pkg/proto/configuration/jmespath:jmespath_proto",
         "//pkg/proto/configuration/jwt:jwt_proto",
         "//pkg/proto/configuration/tls:tls_proto",
         "//pkg/proto/configuration/x509:x509_proto",
@@ -26,6 +27,7 @@ go_proto_library(
     deps = [
         "//pkg/proto/auth",
         "//pkg/proto/configuration/eviction",
+        "//pkg/proto/configuration/jmespath",
         "//pkg/proto/configuration/jwt",
         "//pkg/proto/configuration/tls",
         "//pkg/proto/configuration/x509",
