--- a/pkg/proto/configuration/http/BUILD.bazel
+++ b/pkg/proto/configuration/http/BUILD.bazel
@@ -9,6 +9,7 @@ proto_library(
     deps = [
         "//pkg/proto/auth:auth_proto",
         "//pkg/proto/configuration/grpc:grpc_proto",
+        "//pkg/proto/configuration/jmespath:jmespath_proto",
         "//pkg/proto/configuration/jwt:jwt_proto",
         "//pkg/proto/configuration/tls:tls_proto",
         "@protobuf//:empty_proto",
@@ -23,6 +24,7 @@ go_proto_library(
     deps = [
         "//pkg/proto/auth",
         "//pkg/proto/configuration/grpc",
+        "//pkg/proto/configuration/jmespath",
         "//pkg/proto/configuration/jwt",
         "//pkg/proto/configuration/tls",
     ],
