--- a/pkg/builder/BUILD.bazel
+++ b/pkg/builder/BUILD.bazel
@@ -16,6 +16,7 @@ go_library(
         "//pkg/capabilities",
         "//pkg/digest",
         "//pkg/grpc",
+        "//pkg/program",
         "//pkg/proto/configuration/builder",
         "//pkg/util",
         "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
