--- a/pkg/grpc/BUILD.bazel
+++ b/pkg/grpc/BUILD.bazel
@@ -37,6 +37,7 @@ go_library(
         "//pkg/auth",
         "//pkg/clock",
         "//pkg/eviction",
+        "//pkg/jmespath",
         "//pkg/jwt",
         "//pkg/program",
         "//pkg/proto/auth",
@@ -46,7 +47,6 @@ go_library(
         "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
         "@com_github_grpc_ecosystem_go_grpc_middleware//:go-grpc-middleware",
         "@com_github_grpc_ecosystem_go_grpc_prometheus//:go-grpc-prometheus",
-        "@com_github_jmespath_go_jmespath//:go-jmespath",
         "@io_opentelemetry_go_contrib_instrumentation_google_golang_org_grpc_otelgrpc//:otelgrpc",
         "@io_opentelemetry_go_otel//attribute",
         "@io_opentelemetry_go_otel_trace//:trace",
@@ -126,12 +126,15 @@ go_test(
         ":grpc",
         "//internal/mock",
         "//pkg/auth",
+        "//pkg/clock",
+        "//pkg/jmespath",
+        "//pkg/program",
         "//pkg/proto/auth",
         "//pkg/proto/configuration/grpc",
+        "//pkg/proto/configuration/jmespath",
         "//pkg/testutil",
         "//pkg/util",
         "@bazel_remote_apis//build/bazel/remote/execution/v2:remote_execution_go_proto",
-        "@com_github_jmespath_go_jmespath//:go-jmespath",
         "@com_github_stretchr_testify//require",
         "@io_opentelemetry_go_otel//attribute",
         "@io_opentelemetry_go_otel_trace//:trace",
