Move X.509 client certificate validation out of pkg/grpc
Right now we only perform client certificate validation within the
context of gRPC request authentication. Within Bonanza I'm interested in
also using X.509 client certificates outside of TLS, namely to perform
ECDH to encrypt traffic between workers and clients.

Let's decompose our bb_grpc.TLSClientCertificateAuthenticator, moving
all certificate validation logic into bb_x509.ClientCertificateVerifier.
This is similar to how JWT validation lives in pkg/jwt.

--- a/pkg/proto/configuration/grpc/BUILD.bazel
+++ b/pkg/proto/configuration/grpc/BUILD.bazel
@@ -11,6 +11,7 @@ proto_library(
         "//pkg/proto/configuration/eviction:eviction_proto",
         "//pkg/proto/configuration/jwt:jwt_proto",
         "//pkg/proto/configuration/tls:tls_proto",
+        "//pkg/proto/configuration/x509:x509_proto",
         "@protobuf//:duration_proto",
         "@protobuf//:empty_proto",
         "@protobuf//:struct_proto",
@@ -27,6 +28,7 @@ go_proto_library(
         "//pkg/proto/configuration/eviction",
         "//pkg/proto/configuration/jwt",
         "//pkg/proto/configuration/tls",
+        "//pkg/proto/configuration/x509",
     ],
 )
 
