--- a/pkg/blockdevice/BUILD.bazel
+++ b/pkg/blockdevice/BUILD.bazel
@@ -41,6 +41,7 @@ go_library(
             "@org_golang_x_sys//unix",
         ],
         "@rules_go//go/platform:windows": [
+            "//pkg/filesystem/path",
             "//pkg/util",
             "@org_golang_x_sys//windows",
         ],
