--- a/.bazelrc
+++ b/.bazelrc
@@ -1,2 +1,3 @@
 run --workspace_status_command="bash tools/workspace-status.sh"
 common --incompatible_enable_proto_toolchain_resolution
+common --protocopt=--fatal_warnings
