Unbreak build of //pkg/otel for Windows from non-Linux
If this argument is not provided, it attempts to add some assets that
depend on the tool to be added to run_binary(srcs=...). As that
attribute is cfg = "target", this causes us to also build purgecss for
Windows, which is incorrect.

--- a/pkg/otel/BUILD.bazel
+++ b/pkg/otel/BUILD.bazel
@@ -86,4 +86,6 @@ js_run_binary(
     ],
     copy_srcs_to_bin = False,
     tool = ":purgecss",
+    # https://github.com/aspect-build/rules_js/issues/2121
+    use_execroot_entry_point = False,
 )
