Workaround rules_js issue
Following Ed's suggestion: the previous CI failures show that rules_js is
incorrectly building the tools for the target platform, instead of the
host. Given this is just a stylesheet, we can workaround this by
manually transitioning to the host platform.

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -9,6 +9,7 @@ bazel_dep(name = "googleapis", version = "0.0.0-20250604-de157ca3")
 bazel_dep(name = "jsonnet_go", version = "0.21.0")
 bazel_dep(name = "opentelemetry-proto", version = "1.7.0")
 bazel_dep(name = "toolchains_protoc", version = "0.4.3")  # must come BEFORE protobuf so the toolchain registration wins
+bazel_dep(name = "platforms", version = "1.0.0")
 bazel_dep(name = "protobuf", version = "31.1")
 bazel_dep(name = "rules_go", version = "0.55.1")
 bazel_dep(name = "rules_jsonnet", version = "0.7.2")
